Last fixed for dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
-    --primary: #DE8022;
+    --primary: #A6521A;
     --secondary: #FFF2E5;
     --grey: #B0A69D;
     --grey2: #5C5C5C;
